--- a/notebooks/00_eda.ipynb
+++ b/notebooks/00_eda.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,264 +434,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "data['type_of_meal_plan'] = data['type_of_meal_plan'].replace(type_of_meal_plan_dict)\n",
     "data['room_type_reserved'] = data['room_type_reserved'].replace(room_type_reserved_dict)\n",
-    "data['market_segment_type'] = data['market_segment_type'].replace(market_segment_type_dict)"
+    "data['market_segment_type'] = data['market_segment_type'].replace(market_segment_type_dict)\n",
+    "data['booking_status'] = data['booking_status'].replace({'Not_Canceled':0,'Canceled':1})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.5 save data into a csv\n",
+    "\n",
+    "Since the data already has been processed, the current format will be save into a csv file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('../data/Hotel_Cancelations.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.6 Dictionaries for future references"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Booking_ID</th>\n",
-       "      <td>INN00001</td>\n",
-       "      <td>INN00002</td>\n",
-       "      <td>INN00003</td>\n",
-       "      <td>INN00004</td>\n",
-       "      <td>INN00005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>no_of_adults</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>no_of_children</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>no_of_weekend_nights</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>no_of_week_nights</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>type_of_meal_plan</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>required_car_parking_space</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>room_type_reserved</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>lead_time</th>\n",
-       "      <td>224</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>211</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>arrival_year</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>arrival_month</th>\n",
-       "      <td>10</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>arrival_date</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28</td>\n",
-       "      <td>20</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>market_segment_type</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>repeated_guest</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>no_of_previous_cancellations</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>no_of_previous_bookings_not_canceled</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>avg_price_per_room</th>\n",
-       "      <td>65.0</td>\n",
-       "      <td>106.68</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>94.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>no_of_special_requests</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>booking_status</th>\n",
-       "      <td>Not_Canceled</td>\n",
-       "      <td>Not_Canceled</td>\n",
-       "      <td>Canceled</td>\n",
-       "      <td>Canceled</td>\n",
-       "      <td>Canceled</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                 0             1         2  \\\n",
-       "Booking_ID                                INN00001      INN00002  INN00003   \n",
-       "no_of_adults                                     2             2         1   \n",
-       "no_of_children                                   0             0         0   \n",
-       "no_of_weekend_nights                             1             2         2   \n",
-       "no_of_week_nights                                2             3         1   \n",
-       "type_of_meal_plan                                0             1         0   \n",
-       "required_car_parking_space                       0             0         0   \n",
-       "room_type_reserved                               0             0         0   \n",
-       "lead_time                                      224             5         1   \n",
-       "arrival_year                                  2017          2018      2018   \n",
-       "arrival_month                                   10            11         2   \n",
-       "arrival_date                                     2             6        28   \n",
-       "market_segment_type                              0             1         1   \n",
-       "repeated_guest                                   0             0         0   \n",
-       "no_of_previous_cancellations                     0             0         0   \n",
-       "no_of_previous_bookings_not_canceled             0             0         0   \n",
-       "avg_price_per_room                            65.0        106.68      60.0   \n",
-       "no_of_special_requests                           0             1         0   \n",
-       "booking_status                        Not_Canceled  Not_Canceled  Canceled   \n",
-       "\n",
-       "                                             3         4  \n",
-       "Booking_ID                            INN00004  INN00005  \n",
-       "no_of_adults                                 2         2  \n",
-       "no_of_children                               0         0  \n",
-       "no_of_weekend_nights                         0         1  \n",
-       "no_of_week_nights                            2         1  \n",
-       "type_of_meal_plan                            0         1  \n",
-       "required_car_parking_space                   0         0  \n",
-       "room_type_reserved                           0         0  \n",
-       "lead_time                                  211        48  \n",
-       "arrival_year                              2018      2018  \n",
-       "arrival_month                                5         4  \n",
-       "arrival_date                                20        11  \n",
-       "market_segment_type                          1         1  \n",
-       "repeated_guest                               0         0  \n",
-       "no_of_previous_cancellations                 0         0  \n",
-       "no_of_previous_bookings_not_canceled         0         0  \n",
-       "avg_price_per_room                       100.0      94.5  \n",
-       "no_of_special_requests                       0         0  \n",
-       "booking_status                        Canceled  Canceled  "
+       "{'Meal Plan 1': 0, 'Not Selected': 1, 'Meal Plan 2': 2, 'Meal Plan 3': 3}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head().T"
+    "type_of_meal_plan_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Room_Type 1': 0,\n",
+       " 'Room_Type 4': 1,\n",
+       " 'Room_Type 2': 2,\n",
+       " 'Room_Type 6': 3,\n",
+       " 'Room_Type 5': 4,\n",
+       " 'Room_Type 7': 5,\n",
+       " 'Room_Type 3': 6}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "room_type_reserved_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Offline': 0, 'Online': 1, 'Corporate': 2, 'Aviation': 3, 'Complementary': 4}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "market_segment_type_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Not_Canceled': 0, 'Canceled': 1}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{'Not_Canceled':0,'Canceled':1}"
+   ]
   }
  ],
  "metadata": {
