Update the README.md and add test_cloud_service.py

--- a/notebooks/05_test_services.ipynb
+++ b/notebooks/05_test_services.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Test local service"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -64,6 +71,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Test cloud service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'lead_time':39,\n",
+    "    'arrival_year':2019,\n",
+    "    'avg_price_per_room':102.12,\n",
+    "    'no_of_special_requests':2,\n",
+    "    'market_segment_type':1,\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -94,11 +132,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "End of the notebook"
+   ]
   }
  ],
  "metadata": {
